--- a/misc/style.css
+++ b/misc/style.css
@@ -1,4 +1,6 @@
 body {
-	font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
-	font-size: 62.5%;
+    font-family: "Trebuchet MS", "Helvetica", "Arial",  "Verdana", "sans-serif";
+}
+div {
+    max-width: 800px;
 }
